feat(clojars): per-platform native jars (rift-clojure packaging model)
Stop bundling every platform's native lib into one fat jar. Mirror
Blockether/rift-clojure: publish a small native-free main jar
(com.blockether/tree-sitter-language-pack) plus one native jar per platform
(com.blockether/tree-sitter-language-pack-native-<rid>) carrying the lib as a
classpath resource at natives/<rid>/ — exactly where NativeLib resolves it.
Consumers add the main jar + the single native jar for their platform.

- build.clj: native-rids/native-libs, native-jar + deploy-native :rid, and a
  guard that fails if any native leaks into the main jar
- deploy-clojars.yml release job: stage per-rid natives, deploy all five
  native jars, then the main jar

Verified locally (macos-arm64): main jar native-free; native jar contains
natives/macos-arm64/libts_pack_core_ffi.dylib at the exact NativeLib path.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_0111BBUk1JkRVkpQ5VJ1rdT4